--- a/Halloapp/Info.plist
+++ b/Halloapp/Info.plist
@@ -21,13 +21,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Access is needed to post to your Feed on Halloapp</string>
+	<string>Access is needed to post to your Feed on HalloApp</string>
 	<key>NSContactsUsageDescription</key>
-	<string>Access is needed to find your Contacts on Halloapp</string>
+	<string>Access is needed to find your Contacts on HalloApp</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Access is need to post videoes on Halloapp</string>
+	<string>Access is need to post videos with sound on HalloApp</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Access is needed to post pictures on Halloapp</string>
+	<string>Access is needed to post pictures on HalloApp</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Gotham-Black.otf</string>
