Prepare to support app extensions.
There's now an internal framework named "Core" in the project. This
framework is designed to contain only the code that must be shared
between app and it's extensions.

Also added to the project but not included with app installation
is our very first app extension: Notification Service Extension.
For now this extension does nothing, but in the future it will decode
protobuf content server will send in APNS notification payload and
populate notification presented to the user with real data.

--- a/HalloApp.xcodeproj/xcshareddata/xcschemes/Halloapp.xcscheme
+++ b/HalloApp.xcodeproj/xcshareddata/xcschemes/Halloapp.xcscheme
@@ -28,6 +28,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EAF3A1D42334192000805FF9"
+               BuildableName = "HalloAppTests.xctest"
+               BlueprintName = "HalloAppTests"
+               ReferencedContainer = "container:HalloApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "EAF3A1DF2334192000805FF9"
+               BuildableName = "HalloAppUITests.xctest"
+               BlueprintName = "HalloAppUITests"
+               ReferencedContainer = "container:HalloApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
