--- a/Share Extension/Info.plist
+++ b/Share Extension/Info.plist
@@ -25,16 +25,22 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
-			<dict>
-				<key>NSExtensionActivationSupportsImageWithMaxCount</key>
-				<integer>10</integer>
-				<key>NSExtensionActivationSupportsText</key>
-				<true/>
-				<key>NSExtensionActivationSupportsWebPageWithMaxCount</key>
-				<integer>1</integer>
-				<key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
-				<integer>1</integer>
-			</dict>
+			<string>SUBQUERY (
+                extensionItems,
+                $extensionItem,
+                SUBQUERY (
+                        $extensionItem.attachments,
+                        $attachment,
+                        ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.movie"
+                        OR ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.image"
+                        ).@count &lt;= 10
+                OR SUBQUERY (
+                        $extensionItem.attachments,
+                        $attachment,
+                        ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.plain-text"
+                    ).@count == $extensionItem.attachments.@count
+            ).@count == 1</string>
 			<key>NSExtensionJavaScriptPreprocessingFile</key>
 			<string>ExtensionPreprocessing</string>
 		</dict>
