Enable keychain sharing

--- a/Notification Service Extension/Notification Service Extension.entitlements
+++ b/Notification Service Extension/Notification Service Extension.entitlements
@@ -6,5 +6,9 @@
 	<array>
 		<string>group.com.halloapp.shared</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.halloapp.hallo</string>
+	</array>
 </dict>
 </plist>
