--- a/Halloapp/Halloapp.entitlements
+++ b/Halloapp/Halloapp.entitlements
@@ -8,5 +8,9 @@
 	<array>
 		<string>group.com.halloapp.shared</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.halloapp.hallo</string>
+	</array>
 </dict>
 </plist>
