--- a/Share Extension/Share Extension.entitlements
+++ b/Share Extension/Share Extension.entitlements
@@ -6,5 +6,9 @@
 	<array>
 		<string>group.com.halloapp.shared</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.halloapp.hallo</string>
+	</array>
 </dict>
 </plist>
