Add new invite flow (#643)

--- a/Halloapp/Info.plist
+++ b/Halloapp/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>whatsapp</string>
 		<string>itms-apps</string>
 	</array>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
