Fix label issues CI flow

--- a/.github/workflows/LabelIssues.yml
+++ b/.github/workflows/LabelIssues.yml
@@ -15,14 +15,14 @@ jobs:
         uses: actions/checkout@master
       - name: Get Version number
         id: get-version-number
-        run: echo |
-          cat HalloApp.xcodeproj/project.pbxproj | grep -m1 'MARKETING_VERSION' | cut -d'=' -f2 | tr -d ';' | tr -d ' ' >> versionNum.txt
-          echo '::set-output name=VERSION_NUMBER::${cat versionNum.txt}'
+        run: |
+          export version=`cat HalloApp.xcodeproj/project.pbxproj | grep -m1 'MARKETING_VERSION' | cut -d'=' -f2 | tr -d ';' | tr -d ' '`
+          echo ::set-output name=VERSION_NUMBER::$version
       - name: Get Build number
         id: get-build-number
         run: |
-          cat HalloApp.xcodeproj/project.pbxproj | grep -m1 'CURRENT_PROJECT_VERSION' | cut -d'=' -f2 | tr -d ';' | tr -d ' ' >> buildNum.txt
-          echo '::set-output name=BUILD_NUMBER::${buildNum.txt}'
+          export build=`HalloApp.xcodeproj/project.pbxproj | grep -m1 'CURRENT_PROJECT_VERSION' | cut -d'=' -f2 | tr -d ';' | tr -d ' '`
+          echo ::set-output name=BUILD_NUMBER::$version
       - name: Add Label
         uses: andymckay/labeler@master
         with:
