--- a/HalloAppClip/HalloAppClip.entitlements
+++ b/HalloAppClip/HalloAppClip.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>appclips:halloapp.com/invite</string>
+		<string>appclips:halloapp.com</string>
 	</array>
 	<key>com.apple.developer.parent-application-identifiers</key>
 	<array>
