--- a/.github/workflows/MasterWorkflow.yml
+++ b/.github/workflows/MasterWorkflow.yml
@@ -40,105 +40,15 @@ jobs:
           key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pods-
-        # Load cached Swift Packages (NOTE: IDK if this is actually doing anything, since in the output logs it appears we're still fetching the packages)
-        # Also creates end-of-script step to save the Packages
-      - name: Cache Swift Packages
-        uses: actions/cache@v2
-        with:
-            path: .build
-            key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
-            restore-keys: |
-              ${{ runner.os }}-spm-
         # If the pods couldn't be loaded, then run `pod install` to fetch and build the `CocoaPods`
       - name: Install CocoaPods
         if: steps.cache-pods.outputs.cache-hit != 'true'
         run: pod install
         # Build the project for all devices
       - name: Build Project
-        run: xcodebuild clean build-for-testing -workspace "Halloapp.xcworkspace" -scheme "Halloapp" -destination "${{matrix.destination}}"
-        # Cache the build directory with the commit SHA so that other jobs can run w/o re-building the app
-      - name: Cache build
-        uses: actions/cache@v2
-        with:
-          path: ~/Library/Developer/Xcode/DerivedData
-          key: "$GITHUB_SHA" # TODO: In order to support multiple devices, we need to include the device in the cache key as well (otherwise it'll overwrite the cache with whichever build finished last)
-  
-  # Runs all unit tests available
-  test:
-    name: Test Project
-    runs-on: macOS-latest
-    strategy:
-        matrix:
-            destination: ['platform=iOS Simulator,name=iPhone 12 Pro'] # If you want to test on more devices, change this field to include whatever devices you want (make sure to also build for those devices)
-    needs: compile # Needs compile job so it can access the built files
-        
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-        # Set up SSH to fetch private HalloApp repositories
-        # TODO: Refactor this into a composite action: https://stackoverflow.com/a/63606663
-      - name: Set up ssh-agent
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.CI_PRIVATE_KEY }} # TODO: set up HalloApp bot account and issue new `CI_PRIVATE_KEY` (currently just using Matt's account)
-      - name: Add known SSH hosts
-        run: for ip in $(dig @8.8.8.8 github.com +short); do ssh-keyscan github.com,$ip; ssh-keyscan $ip; done 2>/dev/null >> ~/.ssh/known_hosts
-      - name: Set git to use SSH
-        run: git config --global url."git@github.com:".insteadOf "https://github.com/"
-        # Cache CocoaPods
-      - name: Cache Pods
-        id: cache-pods
-        uses: actions/cache@v2
-        with:
-          path: Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-        # Load cached Swift Packages (NOTE: IDK if this is actually doing anything, since in the output logs it appears we're still fetching the packages)
-        # Also creates end-of-script step to save the Packages
-      - name: Cache Swift Packages
-        uses: actions/cache@v2
-        with:
-            path: .build
-            key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
-            restore-keys: |
-              ${{ runner.os }}-spm-
-        # If the pods couldn't be loaded, then run `pod install` to fetch and build the `CocoaPods`
-      - name: Install CocoaPods
-        if: steps.cache-pods.outputs.cache-hit != 'true'
-        run: pod install
-      - name: Get build cache
-        uses: actions/cache@v2
-        with:
-          path: ~/Library/Developer/Xcode/DerivedData
-          key: "$GITHUB_SHA"
+        run: xcodebuild clean -workspace "Halloapp.xcworkspace" -scheme "Halloapp" -destination "${{matrix.destination}}"
       - name: Run Unit Tests
-        run: xcodebuild test-without-building -workspace "Halloapp.xcworkspace" -scheme "Halloapp" -destination "${{matrix.destination}}" -only-testing "HalloAppTests"
-  
-  # Export new localizations to POEditor
-  localize:
-    name: Export New Localizations
-    runs-on: macOS-latest
-    needs: compile
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@master
-        # Need to perform some setup steps again since the job can't export without trying to re-build
-      - name: Set up ssh-agent
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.CI_PRIVATE_KEY }}
-      - name: Add known SSH hosts
-        run: for ip in $(dig @8.8.8.8 github.com +short); do ssh-keyscan github.com,$ip; ssh-keyscan $ip; done 2>/dev/null >> ~/.ssh/known_hosts
-      - name: Set git to use SSH
-        run: git config --global url."git@github.com:".insteadOf "https://github.com/"
-        # By loading cached build, we drastically speed up the runtime of `xcodebuild -exportLocalizations`
-      - name: Get build cache
-        uses: actions/cache@v2
-        with:
-          path: ~/Library/Developer/Xcode/DerivedData
-          key: "$GITHUB_SHA"
+        run: xcodebuild test -workspace "Halloapp.xcworkspace" -scheme "Halloapp" -destination "${{matrix.destination}}" -only-testing "HalloAppTests"
       - name: Build Localizations
         run: xcodebuild -exportLocalizations -localizationPath . -project HalloApp.xcodeproj
         # Upload the localized files using the POEditor API
