--- a/.github/workflows/MasterWorkflow.yml
+++ b/.github/workflows/MasterWorkflow.yml
@@ -15,7 +15,7 @@ jobs:
   # Compile the project. This job sets up the repository and subsequently builds the project.
   compile:
     name: Compile Project
-    runs-on: macOS-latest
+    runs-on: macos-11
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -72,7 +72,7 @@ jobs:
 
   unit-test:
       name: Run Unit Tests
-      runs-on: macOS-latest
+      runs-on: macos-11
       needs: compile
       strategy:
           matrix:
@@ -121,7 +121,7 @@ jobs:
 
   export-localizations:
       name: Export Localizations
-      runs-on: macOS-latest
+      runs-on: macos-11
       needs: compile
       steps:
         - name: Checkout
