--- a/.github/workflows/PullRequestWorkflow.yml
+++ b/.github/workflows/PullRequestWorkflow.yml
@@ -15,7 +15,7 @@ jobs:
   # Compile the project. This job sets up the repository and subsequently builds the project.
   compile:
     name: Compile Project
-    runs-on: macOS-latest
+    runs-on: macos-11
     steps:
       - name: Checkout
         uses: actions/checkout@master
@@ -84,7 +84,7 @@ jobs:
 
   unit-test:
       name: Run Unit Tests
-      runs-on: macOS-latest
+      runs-on: macos-11
       needs: compile
       strategy:
           matrix:
