--- a/Share Extension/Info.plist
+++ b/Share Extension/Info.plist
@@ -35,14 +35,14 @@
                 SUBQUERY (
                         $extensionItem.attachments,
                         $attachment,
-                        ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO &quot;public.movie&quot;
-                        OR ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO &quot;public.image&quot;
+                        ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.movie"
+                        OR ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.image"
                         ).@count &lt;= 10
                 OR SUBQUERY (
                         $extensionItem.attachments,
                         $attachment,
-                        ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO &quot;public.url&quot;
-                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO &quot;public.plain-text&quot;
+                        ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.url"
+                        || ANY $attachment.registeredTypeIdentifiers UTI-CONFORMS-TO "public.plain-text"
                     ).@count == $extensionItem.attachments.@count
             ).@count == 1</string>
 			<key>NSExtensionJavaScriptPreprocessingFile</key>
