[Workflows] Attempt to fix build (#1341)
* [PRWorkflow] Always install pods for now

* [PRWorkflow] Try adding date to cache key for pods

* [PRWorkflow] Skip install pods if cache is found

* [Workflows] Run pod install even if cache is found for now

For some reason every time the build tries to use the cache an error was
thrown saying the sandbox was not in sync with the lockfile.
Thus, skip using the cache for now and also since we're pulling in only
one library for cocoapods now the net time it was saving in action minutes
was actually only 30 seconds so the need to optimize this step is lessened.

--- a/.github/workflows/MasterWorkflow.yml
+++ b/.github/workflows/MasterWorkflow.yml
@@ -43,7 +43,7 @@ jobs:
             
         # If the pods couldn't be loaded, then run `pod install` to fetch and build the `CocoaPods`
       - name: Install CocoaPods
-        if: steps.cache-pods.outputs.cache-hit != 'true'
+        #if: steps.cache-pods.outputs.cache-hit != 'true'
         run: pod install
         
       - name: Cache Swift Packages
