--- a/.github/workflows/PullRequestWorkflow.yml
+++ b/.github/workflows/PullRequestWorkflow.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
             for ip in $(dig @8.8.8.8 github.com +short); do ssh-keyscan github.com,$ip; ssh-keyscan $ip; done 2>/dev/null >> ~/.ssh/known_hosts
             git config --global url."git@github.com:".insteadOf "https://github.com/"
-        
+
         # Load cached CocoaPods if the Podfile matches. Also creates end-of-script step to save the CocoaPods if the Podfile didn't match or wasn't cached
       - name: Cache Pods
         id: cache-pods
@@ -41,7 +41,7 @@ jobs:
             
         # If the pods couldn't be loaded, then run `pod install` to fetch and build the `CocoaPods`
       - name: Install CocoaPods
-        if: steps.cache-pods.outputs.cache-hit != 'true'
+        #if: steps.cache-pods.outputs.cache-hit != 'true'
         run: pod install
         
       - name: Cache Swift Packages
