Handle call intents in halloapp (#1640)
* Handle call intents in halloapp

- added support for call intents in halloapp.
- this should now enable users to make calls to halloapp through the contacts app and recent call log.
- this diff includes all the details to be able to work with both contacts and unknown numbers.

--- a/Halloapp/Info.plist
+++ b/Halloapp/Info.plist
@@ -45,7 +45,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>This lets you take photos and videos right from within HalloApp.</string>
 	<key>NSContactsUsageDescription</key>
-	<string>Upload your contacts to HalloApp's servers to see posts of your friends and let them see yours.</string>
+	<string>Upload your contacts to HalloApp&apos;s servers to see posts of your friends and let them see yours.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This lets you record videos with sound.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
@@ -53,6 +53,7 @@
 	<key>NSUserActivityTypes</key>
 	<array>
 		<string>INSendMessageIntent</string>
+		<string>INStartCallIntent</string>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
