Handle mic permissions for calls properly (#1851)
* Handle mic permissions for calls properly.

- fixes some issues with handling microphone permissions for calls.
- updated mic-permission text.
- we now end calls automatically incase client does not have an active permission set.
- user cannot place calls now if the microphone permissions are disabled.
- so this diff basically checks mic permissions before placing an outgoing call or before answering an incoming call.
- tested this and presents mic-permission alerts incase of failures.

--- a/Halloapp/Info.plist
+++ b/Halloapp/Info.plist
@@ -47,7 +47,7 @@
 	<key>NSContactsUsageDescription</key>
 	<string>Upload your contacts to HalloApp&apos;s servers to see posts of your friends and let them see yours.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>This lets you record videos with sound.</string>
+	<string>This lets you make calls, send audio posts and messages, and record videos with sound.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This lets you share photos and videos from your library and save the ones you capture.</string>
 	<key>NSUserActivityTypes</key>
