--- a/Halloapp/Info.plist
+++ b/Halloapp/Info.plist
@@ -45,7 +45,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>This lets you take photos and videos right from within HalloApp.</string>
 	<key>NSContactsUsageDescription</key>
-	<string>Upload your contacts to HalloApp&apos;s servers to see posts of your friends and let them see yours.</string>
+	<string>Upload your contacts to HalloApp's servers to see posts of your friends and let them see yours.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This lets you make calls, send audio posts and messages, and record videos with sound.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
@@ -98,6 +98,7 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>fetch</string>
 		<string>processing</string>
 		<string>remote-notification</string>
