--- a/Halloapp/Halloapp.entitlements
+++ b/Halloapp/Halloapp.entitlements
@@ -10,6 +10,7 @@
 		<string>applinks:*.halloapp.com</string>
 		<string>applinks:www.halloapp.com</string>
 		<string>applinks:invite.halloapp.com</string>
+		<string>applinks:share.halloapp.com</string>
 		<string>appclips:halloapp.com</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
