--- a/Share Extension/Info.plist
+++ b/Share Extension/Info.plist
@@ -53,5 +53,29 @@
 		<key>NSExtensionPrincipalClass</key>
 		<string>ShareViewController</string>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Gotham-Black.otf</string>
+		<string>Gotham-BlackIta.otf</string>
+		<string>Gotham-Bold.otf</string>
+		<string>Gotham-BoldIta.otf</string>
+		<string>Gotham-Book.otf</string>
+		<string>Gotham-BookIta.otf</string>
+		<string>Gotham-Light.otf</string>
+		<string>Gotham-LightIta.otf</string>
+		<string>Gotham-Medium.otf</string>
+		<string>Gotham-MediumIta.otf</string>
+		<string>Gotham-Thin.otf</string>
+		<string>Gotham-ThinIta.otf</string>
+		<string>Gotham-Ultra.otf</string>
+		<string>Gotham-UltraIta.otf</string>
+		<string>Gotham-XLight.otf</string>
+		<string>Gotham-XLightIta.otf</string>
+		<string>Quicksand-Bold.ttf</string>
+		<string>Quicksand-Light.ttf</string>
+		<string>Quicksand-Medium.ttf</string>
+		<string>Quicksand-Regular.ttf</string>
+		<string>Quicksand-SemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
