--- a/HalloApp.xcodeproj/xcshareddata/xcschemes/Halloapp.xcscheme
+++ b/HalloApp.xcodeproj/xcshareddata/xcschemes/Halloapp.xcscheme
@@ -87,6 +87,12 @@
             ReferencedContainer = "container:HalloApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.ConcurrencyDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Internal Beta"
