--- a/.github/workflows/MasterWorkflow.yml
+++ b/.github/workflows/MasterWorkflow.yml
@@ -46,14 +46,14 @@ jobs:
         run: xcodebuild clean build-for-testing
             -workspace "Halloapp.xcworkspace"
             -scheme "Halloapp"
-            -destination 'platform=iOS Simulator,name=iPhone 12 Pro,OS=latest'
+            -destination 'platform=iOS Simulator,name=iPhone 12 Pro'
             -clonedSourcePackagesDirPath SourcePackages
             
       - name: Cache build
         uses: actions/cache@v2
         with:
           path: ~/Library/Developer/Xcode/DerivedData
-          key: "$GITHUB_SHA"
+          key: build-${{ github.sha }}
 
   unit-test:
       name: Run Unit Tests
@@ -61,7 +61,7 @@ jobs:
       needs: compile
       strategy:
           matrix:
-              destination: ['platform=iOS Simulator,name=iPhone 12 Pro,OS=latest'] # If you want to build for more devices, change this field to include whatever devices you want
+              destination: ['platform=iOS Simulator,name=iPhone 12 Pro'] # If you want to build for more devices, change this field to include whatever devices you want
       steps:
         - name: Checkout
           uses: actions/checkout@master
@@ -79,7 +79,7 @@ jobs:
           uses: actions/cache@v2
           with:
             path: ~/Library/Developer/Xcode/DerivedData
-            key: "$GITHUB_SHA"
+            key: build-${{ github.sha }}
 
         - name: Run Unit Tests
           run: xcodebuild test-without-building
@@ -120,7 +120,7 @@ jobs:
           uses: actions/cache@v2
           with:
             path: ~/Library/Developer/Xcode/DerivedData
-            key: "$GITHUB_SHA"
+            key: build-${{ github.sha }}
 
         - name: Build Localizations
           run: xcodebuild
