--- a/Halloapp/Info.plist
+++ b/Halloapp/Info.plist
@@ -43,15 +43,15 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>This lets you take photos and videos right from within HalloApp.</string>
+	<string>This lets you make video calls, and take photos and videos on HalloApp</string>
 	<key>NSContactsUsageDescription</key>
-	<string>Allow HalloApp access to your contacts to be able to share and see posts from your friends and family.</string>
+	<string>To share and see posts from your friends and family, allow HalloApp upload your contacts to it&apos;s servers.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This lets you make calls, send audio posts and messages, and record videos with sound.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This lets you share photos and videos from your library and save the ones you capture.</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>This lets you browse and share locations near you.</string>
+	<string>This lets you send photos and videos from your gallery, and save the ones you capture.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This lets you browse and share locations near you.</string>
 	<key>NSUserActivityTypes</key>
 	<array>
 		<string>INSendMessageIntent</string>
