--- a/Halloapp/Info.plist
+++ b/Halloapp/Info.plist
@@ -39,6 +39,8 @@
 	<array>
 		<string>whatsapp</string>
 		<string>itms-apps</string>
+		<string>twitter</string>
+		<string>instagram-stories</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
