--- a/Intents Extension/Info.plist
+++ b/Intents Extension/Info.plist
@@ -31,6 +31,7 @@
 			<key>IntentsSupported</key>
 			<array>
 				<string>INSendMessageIntent</string>
+				<string>INStartCallIntent</string>
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
