--- a/Halloapp/Halloapp.entitlements
+++ b/Halloapp/Halloapp.entitlements
@@ -14,6 +14,8 @@
 		<string>appclips:halloapp.com</string>
 		<string>applinks:share-test.halloapp.com</string>
 	</array>
+	<key>com.apple.developer.siri</key>
+	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.halloapp.shared</string>
